--- a/app.json
+++ b/app.json
@@ -15,9 +15,10 @@
         },
         "assetBundlePatterns": ["**/*"],
         "android": {
-            "permissions": [],
+            "enableDangerousExperimentalLeanBuilds": true,
             "package": "capelski.blackjump",
-            "enableDangerousExperimentalLeanBuilds": true
+            "permissions": [],
+            "versionCode": 1
         },
         "ios": {
             "bundleIdentifier": "capelski.blackjump",
