--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "ios": "expo start --ios",
         "web": "expo start --web",
         "eject": "expo eject",
-        "build": "expo build:android -t apk"
+        "build": "expo build:android -t app-bundle"
     },
     "dependencies": {
         "@react-native-community/async-storage": "^1.12.1",
