--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "ios": "expo start --ios",
         "web": "expo start --web",
         "eject": "expo eject",
-        "build": "expo build:android -t app-bundle"
+        "build:android": "expo build:android -t app-bundle",
+        "build:web": "rm -rf docs && expo build:web && mv web-build/ docs/"
     },
     "dependencies": {
         "@react-native-community/async-storage": "^1.12.1",
@@ -33,5 +34,6 @@
         "prettier": "^2.1.2",
         "typescript": "~3.9.5"
     },
-    "private": true
+    "private": true,
+    "homepage": "/blackjump"
 }
