chore: change app name case

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "expo": {
-        "name": "BlackJump",
+        "name": "Blackjump",
         "slug": "blackjump",
         "version": "1.16.0",
         "orientation": "portrait",
