--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+    "name": "blackjump",
+    "version": "1.18.0",
     "main": "node_modules/expo/AppEntry.js",
     "scripts": {
         "start": "expo start",
@@ -10,30 +12,29 @@
         "build:web": "rm -rf docs && expo build:web && mv web-build/ docs/"
     },
     "dependencies": {
-        "@react-native-community/async-storage": "^1.12.1",
-        "@react-native-community/masked-view": "0.1.10",
-        "@react-navigation/native": "^5.8.10",
-        "@react-navigation/stack": "^5.12.8",
-        "expo": "~39.0.2",
-        "expo-av": "~8.6.0",
-        "expo-status-bar": "~1.0.2",
-        "react": "16.13.1",
-        "react-dom": "16.13.1",
-        "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+        "@react-native-async-storage/async-storage": "~1.15.0",
+        "@react-navigation/native": "^6.0.6",
+        "@react-navigation/stack": "^6.0.11",
+        "expo": "~44.0.0",
+        "expo-av": "~10.2.0",
+        "expo-linking": "~3.0.0",
+        "expo-status-bar": "~1.2.0",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-native": "0.64.3",
         "react-native-chart-kit": "^6.11.0",
-        "react-native-gesture-handler": "~1.7.0",
-        "react-native-reanimated": "~1.13.0",
-        "react-native-safe-area-context": "3.1.4",
-        "react-native-screens": "~2.10.1",
-        "react-native-svg": "^12.1.0",
-        "react-native-web": "~0.13.12"
+        "react-native-gesture-handler": "~2.1.0",
+        "react-native-reanimated": "~2.3.1",
+        "react-native-safe-area-context": "3.3.2",
+        "react-native-screens": "~3.10.1",
+        "react-native-svg": "12.1.1",
+        "react-native-web": "0.17.1"
     },
     "devDependencies": {
-        "@types/react": "~16.9.35",
-        "@types/react-dom": "~16.9.8",
-        "@types/react-native": "~0.63.2",
-        "prettier": "^2.1.2",
-        "typescript": "~3.9.5"
+        "@babel/core": "^7.12.9",
+        "@types/react": "~17.0.21",
+        "@types/react-native": "~0.64.12",
+        "typescript": "~4.3.5"
     },
     "private": true,
     "homepage": "/blackjump"
