--- a/app.json
+++ b/app.json
@@ -1,30 +1,38 @@
 {
-    "expo": {
-        "name": "Blackjump",
-        "slug": "blackjump",
-        "version": "1.18.3",
-        "orientation": "portrait",
-        "icon": "./assets/icon.png",
-        "splash": {
-            "image": "./assets/splash.png",
-            "resizeMode": "contain",
-            "backgroundColor": "#ffffff"
-        },
-        "updates": {
-            "fallbackToCacheTimeout": 0
-        },
-        "assetBundlePatterns": ["**/*"],
-        "android": {
-            "package": "capelski.blackjump",
-            "permissions": [],
-            "versionCode": 31
-        },
-        "ios": {
-            "bundleIdentifier": "capelski.blackjump",
-            "supportsTablet": true
-        },
-        "web": {
-            "favicon": "./assets/favicon.png"
-        }
+  "expo": {
+    "name": "Blackjump",
+    "slug": "blackjump",
+    "version": "1.18.3",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": ["**/*"],
+    "android": {
+      "package": "capelski.blackjump",
+      "permissions": [],
+      "versionCode": 31
+    },
+    "ios": {
+      "bundleIdentifier": "capelski.blackjump",
+      "supportsTablet": true
+    },
+    "web": {
+      "favicon": "./assets/favicon.png",
+      "output": "single",
+      "bundler": "metro"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "34e123f1-b52c-4ae2-b68a-c78a8146c87b"
+      }
     }
+  }
 }
