--- a/package.json
+++ b/package.json
@@ -7,36 +7,36 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "build:android": "expo build:android -t app-bundle",
-    "build:web": "rm -rf docs && expo build:web && mv web-build/ docs/"
+    "build:android": "npx eas-cli@latest build --platform android",
+    "build:android:apk": "npx eas-cli@latest build --platform android --profile preview",
+    "build:web": "rm -rf docs && rm -rf dist && npx expo export -p web && mv dist docs"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-picker/picker": "2.2.1",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/stack": "^6.0.11",
-    "expo": "~44.0.0",
-    "expo-av": "~10.2.0",
-    "expo-linking": "~3.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-chart-kit": "^6.11.0",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
-    "expo-updates": "~0.11.6"
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "2.6.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "~50.0.17",
+    "expo-av": "~13.10.6",
+    "expo-linking": "~6.2.2",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
   },
   "private": true,
   "homepage": "/blackjump"
