--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "source.organizeImports": "explicit"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "cSpell.words": ["Pressable", "splittable"]
+  "cSpell.words": ["blackjump", "Pressable", "splittable"]
 }
