--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web",
     "build:android": "npx eas-cli@latest build --platform android",
     "build:android:apk": "npx eas-cli@latest build --platform android --profile preview",
-    "build:web": "npm run build:web:pre && npx expo export -p web && npm run build:web:post",
-    "build:web:pre": "rm -rf docs && rm -rf dist",
-    "build:web:post": "mv dist docs && sed -i '' -e s/_expo/blackjump/ docs/index.html && mv docs/_expo/static docs/static"
+    "build:web": "npm run build:web:clear && npm run build:web:bundle && npm run build:web:patch && npm run build:web:move",
+    "build:web:clear": "rm -rf docs && rm -rf dist",
+    "build:web:bundle": "npx expo export -p web",
+    "build:web:patch": "sed -i '' -e s/_expo/blackjump\\\\/\\\\_expo/ dist/index.html && sed -i '' -e s/assets\\\\/assets/blackjump\\\\/assets\\\\/assets/g dist/_expo/static/js/web/AppEntry-*",
+    "build:web:move": "mv dist docs"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
