--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
     "build:web:move": "mv dist docs && mv docs/_expo/static docs/static && rm -rf docs/_expo"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-picker/picker": "2.6.1",
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "~50.0.17",
-    "expo-av": "~13.10.6",
-    "expo-linking": "~6.2.2",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "expo": "^52.0.46",
+    "expo-av": "~15.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "typescript": "^5.1.3"
   },
   "private": true,
