--- a/package.json
+++ b/package.json
@@ -16,31 +16,32 @@
     "build:web:move": "mv dist docs && mv docs/_expo/static docs/static && rm -rf docs/_expo"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "2.9.0",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "^52.0.46",
-    "expo-av": "~15.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-status-bar": "~2.0.1",
-    "expo-updates": "~0.27.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "expo": "^54.0.7",
+    "expo-av": "~16.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.10",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13"
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
-    "typescript": "^5.1.3"
+    "@types/react": "^19.1.13",
+    "typescript": "~5.9.2"
   },
   "private": true,
   "homepage": "/blackjump"
