--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "^54.0.7",
-    "expo-av": "~16.0.7",
+    "expo-audio": "~1.0.11",
     "expo-linking": "~8.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.10",
